# documentmanagement_agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  openapi_snapshot.json  project.config.json  project.private.config.json  pyproject.toml  tmp_ui_upload.csv
backend/: Dockerfile  _fix_compliance.py  _run_migrations.py  _verify_db.py  alembic.ini  celery_app.py  patch.py  patch2.py  pyproject.toml  requirements.training.txt  requirements.txt
backend/alembic/: README.md  env.py
backend/app/: bootstrap.py  config.py  dependencies.py  main.py
backend/app/agent/: supervisor.py
backend/app/evaluation/: golden_dataset.py  ragas_runner.py  report_generator.py  tasks.py
backend/app/ingestion/: embedder.py  graph_extractor.py  pipeline.py  spark_batch.py  tasks.py
backend/app/maintenance/: __init__.py  tasks.py
backend/app/memory/: long_term_memory.py  session_memory.py  working_memory.py
backend/app/models/: __init__.py
backend/app/observability/: langfuse_client.py  logging.py  metrics.py
backend/app/retrieval/: es_client.py  fusion.py  graph_searcher.py  hybrid_searcher.py  milvus_client.py  neo4j_client.py  reranker.py  semantic_cache.py
backend/app/security/: file_scanner.py  input_guard.py  output_guard.py  pii_masker.py  sanitizer.py  watermark.py
backend/app/services/: analytics_service.py  auth_service.py  canary_router.py  (+23 more)
backend/scripts/: bootstrap_runtime.sh  rebuild_swu_html_docs.py  run_lora_sft.py  warm_training_model.py
backend/tests/: conftest.py  test_agent_fallbacks.py  test_auth_domain_policy.py  test_auth_service.py  test_chat_resume.py  test_chunking_and_eval.py  test_ci_gate_logic.py  test_delivery_gap_service.py  test_document_service_delete.py  test_enterprise_tuning_service.py  test_evaluation_service.py  test_evidence_pack.py  test_generator_fallback_utf8.py  test_graph_extractor.py  test_graph_searcher_hydration.py  test_html_parser.py  test_hybrid_searcher_filters.py  test_hybrid_searcher_graph_metrics.py  test_index_sync_service.py  test_ingestion_tasks.py  test_langgraph_compat.py  test_llm_service_profiles.py  test_llm_training_deployment.py  test_llm_training_service.py  test_local_finetune.py  test_maintenance_tasks.py  test_metadata_tagger.py  test_mobile_oauth_service.py  test_parsers.py  test_placeholder_runtime.py  test_platform_readiness_service.py  test_public_corpus_service.py  test_push_notifications.py  test_query_rewriter.py  test_redis_startup_resilience.py  test_reranker.py  test_retrieval_clients.py  test_retrieval_integrity_service.py  test_retrieval_observability_service.py  test_retriever_followup_scoping.py  (+13 more)
(+276 files in other folders)
