[project]
name = "docmind-agent"
version = "0.1.0"
description = "Non-LLM enterprise document management and retrieval platform for DocMind Agent"
requires-python = ">=3.11"
readme = "docs/IMPLEMENTATION_PLAN.md"
license = { text = "Proprietary" }
authors = [{ name = "DocMind Team" }]

dependencies = []

[tool.uv]
dev-dependencies = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
