[project]
name = "docmind-agent"
version = "0.1.0"
description = "Non-LLM enterprise document management and retrieval platform for DocMind Agent"
requires-python = ">=3.11"
readme = "docs/IMPLEMENTATION_PLAN.md"
license = { text = "Proprietary" }
authors = [{ name = "DocMind Team" }]

dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.0",
  "pydantic==2.9.0",
  "pydantic-settings==2.5.0",
  "sqlalchemy[asyncio]==2.0.35",
  "asyncpg==0.30.0",
  "psycopg2-binary==2.9.9",
  "alembic==1.13.0",
  "redis[hiredis]==5.1.0",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "python-multipart==0.0.12",
  "celery[redis]==5.4.0",
  "flower==2.0.1",
  "minio==7.2.0",
  "marshmallow==3.23.3",
  "pymilvus==2.4.0",
  "elasticsearch[async]==8.13.0",
  "neo4j==5.18.0",
  "httpx==0.27.0",
  "pypdf==5.4.0",
  "google-auth==2.40.3",
  "python-docx==1.1.2",
  "openpyxl==3.1.5",
  "pandas==2.2.3",
  "structlog==24.4.0",
  "langgraph==0.5.4",
  "langgraph-checkpoint-postgres==2.0.25",
  "psycopg[binary]==3.3.3",
  "langfuse==2.50.0",
  "presidio-analyzer==2.2.355",
  "presidio-anonymizer==2.2.355",
  "unstructured==0.15.0",
  "unstructured-inference",
  "pdfminer.six==20240706",
  "pdf2image==1.17.0",
  "pillow-heif==1.1.1",
  "paddleocr==2.8.0",
  "paddlepaddle==3.3.0",
  "setuptools>=68.0.0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
