[project]
name = "docmind-agent-backend"
version = "0.1.0"
description = "Backend service for the DocMind enterprise document QA agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
